# Vayu

./: .gitignore  AudioEQ.jucer  CMakeLists.txt  LICENSE  README.md  Vayu.jucer
.github/workflows/: build-vayu.yml
Builds/MacOSX/: AudioEQAudioProcessorEditor.swift  Info-AU.plist  Info-App.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist  PluginConfig.h  Vayu.icns
Builds/MacOSX/AudioEQ.xcodeproj/: project.pbxproj
Builds/MacOSX/Vayu.xcodeproj/: project.pbxproj
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: PluginConfig.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build_macos_installer.sh  build_windows_installer.ps1
